lib/bait/tests/inout_error/struct/immutable_assign.in.bt
struct Foo {
	a i32
mut:
	b i32
}

f := Foo{}
f.a = 1
f.b = 2
